--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -13,6 +13,9 @@ body {
   @apply w-full max-w-3xl p-5 mx-auto;
 }
 
+.header-link {
+  cursor:pointer;
+}
 
 #overview-table  {
   margin-left:auto; 
