--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -13,6 +13,10 @@ body {
   @apply w-full max-w-3xl p-5 mx-auto;
 }
 
+.center-margin {
+  margin-right: auto;
+  margin-left: auto;
+}
 .header-link {
   cursor:pointer;
 }
